Fix: footer element alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -472,10 +472,12 @@ footer {
   color: #1f7c2893;
   font-family: "Tilt Neon", sans-serif;
   font-size: 16px;
+}
+
+#footer {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-around;
 }
 
 footer a {
